--- a/frontend/my-react-app/src/components/pages/store/UserProfile.css
+++ b/frontend/my-react-app/src/components/pages/store/UserProfile.css
@@ -29,6 +29,21 @@ body, html {
   margin-bottom: 2rem;
 }
 
+.profile-picture {
+  width: 80px;
+  height: 80px;
+  border-radius: 50%;
+  overflow: hidden;
+  border: 2px solid #fff;
+  margin-right: 1rem;
+}
+
+.profile-picture img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
 .profile-title {
   font-size: 2.5rem;
   color: #cc0000;
@@ -165,6 +180,8 @@ body, html {
   font-size: 1rem;
   color: #cccccc;
 }
+
+
 
 /* Media Queries for Responsiveness */
 @media (max-width: 768px) {
